# delegent

./: LICENSE  README.md  dot_env  main.py  pyproject.toml  requirements.txt  setup.py  user_config.py
delegent/core/agents/: agent.py  agent_registry.py
delegent/core/engines/: assignment_engine.py  greedy_assignment_engine.py  ml_assignment_engine.py  planner.py
delegent/core/evaluator/: evaluator.py
delegent/core/execution/: execution_layer.py
delegent/core/tasks/: llm_task_decomposer.py  subtask.py  task.py
delegent/llm/: llm_provider.py
delegent/test/: test_assignment_engine.py  test_greedy_assignment_engine.py
delegent/utils/: loader.py  logger.py  utils.py
examples/: Example-1.py  Example-2.py  Example-3.py  Example-5.py
workspace/agents/: agent_profiles.py  agent_registry.json
workspace/config/: config.py
workspace/log/: system_log.txt
